--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <header class="header">
       <div class="left">
-        <img src="assets/swingwlogo.svg" class="Adafruit-Logo">
+        <!img src="assets/swingwlogo.svg" class="Adafruit-Logo">
       </div>
       <div class="right">
         <select id="baudRate"></select>
