--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Adafruit ESPTool</title>
+    <title>ESPTool</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -60,7 +60,7 @@
         you're running Chrome 89 or later.
       </div>
       <div class="subheader">
-        <div class="title left">Adafruit ESPTool</div>
+        <div class="title left">ESPTool</div>
         <div class="right">
           <label for="darkmode"> Dark Mode </label>
           <div class="onoffswitch">
