offset choice now just 1

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="upload">
             <label
               >Offset: 0x
-              <input class="offset" type="text" value="0" />
+              <input class="offset" type="text" value="10000" />
             </label>
             <label class="firmware">
               <input type="file" accept=".bin" />
@@ -100,7 +100,7 @@
             </label>
             <div class="progress-bar hidden"><div></div></div>
           </div>
-          <div class="upload">
+          <!--div class="upload">
             <label
               >Offset: 0x
               <input class="offset" type="text" value="0" />
@@ -162,11 +162,11 @@
               <span>Choose a file&hellip;</span>
             </label>
             <div class="progress-bar hidden"><div></div></div>
-          </div>
-          <div class="buttons">
+          </div-->
+          <!--div class="buttons">
             <button id="butErase" type="button" disabled="disabled">
               Erase
-            </button>
+            </button-->
             <button id="butProgram" type="button" disabled="disabled">
               Program
             </button>
@@ -194,9 +194,9 @@
         </div>
         <button id="butClear" type="button">Clear Text</button>
       </div>
-      <div class="center">
+      <!--div class="center">
         Written by <a href="https://github.com/makermelissa">Melissa LeBlanc-Williams</a> for Adafruit Industries.
-      </div>
+      </div-->
     </footer>
   </body>
 </html>
