remove erase button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </label>
             <div class="progress-bar hidden"><div></div></div>
           </div>
-          <!--div class="upload">
+          <div class="upload">
             <label
               >Offset: 0x
               <input class="offset" type="text" value="0" />
@@ -163,8 +163,8 @@
             </label>
             <div class="progress-bar hidden"><div></div></div>
           </div-->
-          <!--div class="buttons">
-            <button id="butErase" type="button" disabled="disabled">
+          <div class="buttons">
+            <!--button id="butErase" type="button" disabled="disabled">
               Erase
             </button-->
             <button id="butProgram" type="button" disabled="disabled">
